--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "gsap": "^3.12.5",
     "pocketbase": "^0.21.1",
+    "smooth-scroll": "^16.1.3",
     "v3-scroll-lock": "^1.3.2",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
