--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "unplugin-vue-router": "^0.8.4",
     "vite": "^5.0.11",
     "vite-plugin-pages": "^0.32.0",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
     "vue-tsc": "^1.8.27"
   }
 }
